RESOLVED FIXED58270
Assertion failure on launch in LayerChangesFlusher::setHook
https://bugs.webkit.org/show_bug.cgi?id=58270
Summary Assertion failure on launch in LayerChangesFlusher::setHook
Jon Honeycutt
Reported 2011-04-11 14:28:40 PDT
Assertion failure on launch: ASSERTION FAILED: ::SetWindowsHookExW failed with error 126 m_hook ..\platform\graphics\ca\win\LayerChangesFlusher.cpp(111) : WebCore::LayerChangesFlusher::setHook <rdar://problem/9267042>
Attachments
Patch (2.33 KB, patch)
2011-04-11 14:32 PDT, Jon Honeycutt
aroben: review+
Jon Honeycutt
Comment 1 2011-04-11 14:32:03 PDT
Adam Roben (:aroben)
Comment 2 2011-04-11 14:33:23 PDT
Comment on attachment 89089 [details] Patch I think we can get rid of the WebCoreInstanceHandle.h include, too.
Jon Honeycutt
Comment 3 2011-04-11 14:41:58 PDT
Landed in r83502.
Note You need to log in before you can comment on or make changes to this bug.