<rdar://problem/9267042> Assertion failure on launch in LayerChangesFlusher::setHook().

https://bugs.webkit.org/show_bug.cgi?id=58270

Reviewed by Adam Roben.

* platform/graphics/ca/win/LayerChangesFlusher.cpp:
(WebCore::LayerChangesFlusher::setHook):
MSDN says that the HINSTANCE passed in must be null if the thread ID
passed is a thread created by this process and the hook procedure is
within this process.

Canonical link: https://commits.webkit.org/73266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83502 268f45cc-cd09-0410-ab3c-d52691b4dbfc